--- a/MFC-PropertySheets.vcxproj
+++ b/MFC-PropertySheets.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="MFC-PropertySheets.h" />
     <ClInclude Include="MFC-PropertySheetsDlg.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PropPage1.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -199,6 +200,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PropPage1.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCPropertySheets.rc" />
