--- a/MFC-PropertySheets.vcxproj
+++ b/MFC-PropertySheets.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="MFC-PropertySheetsDlg.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PropPage1.h" />
+    <ClInclude Include="PropPage2.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -201,6 +202,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PropPage1.cpp" />
+    <ClCompile Include="PropPage2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCPropertySheets.rc" />
