--- a/MFC-PropertySheets.vcxproj.filters
+++ b/MFC-PropertySheets.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="PropPage1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PropPage2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFC-PropertySheets.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PropPage1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PropPage2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
